Fix inline code tag contrast in ansum.css (#3050)
* Remove line from ansum.css, fixing contrast

As with #3047 #3048, current behavior produces very pale-on-white text in inline code tags

* Update CREDITS.md

#3048 and related

--- a/p/themes/Ansum/ansum.css
+++ b/p/themes/Ansum/ansum.css
@@ -1099,7 +1099,6 @@ form th {
 .content code, .content.thin code {
   padding: 2px 5px;
   background: #fcfaf8;
-  color: #f5f0ec;
   border: 1px solid #f5f0ec;
   border-radius: 3px;
 }
